latest rss news / blog posts

--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -40,8 +40,8 @@ header div.container.header {
     border-top: 1px solid #ccc;
   }
 
-
   #homepage-version-one {
+
     img#download-app {
       border-radius: 21px;
       width: 100%;
@@ -52,7 +52,6 @@ header div.container.header {
         box-shadow: 0px 1px 5px rgba(0,0,0,0.5);
       }
     }
-
 
     #become-supporter {
       color: #fff;
@@ -114,8 +113,6 @@ header div.container.header {
       }
     }
 
-
-
     .supporter-info-wrapper {
       .column {
         img {
@@ -140,5 +137,13 @@ header div.container.header {
         }
       }
     }
+
+    #latest-rss-news,
+    #latest-blog-posts {
+      .menu.vertical {
+        width: 100%;
+      }
+    }
+
   }
 }
