--- a/application/modules/default/views/scripts/product/add.phtml
+++ b/application/modules/default/views/scripts/product/add.phtml
@@ -26,6 +26,7 @@ $helperImage = new Default_View_Helper_Image();
 $helpMemberUrl = new Default_View_Helper_BuildMemberUrl();
 $helpProductUrl = new Default_View_Helper_BuildProductUrl();
 $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
+$packagetypeListHelper = new Default_View_Helper_FetchPackagetypeTags();
 
 $modelCategory = new Default_Model_DbTable_ProjectCategory();
 $valueCatId = $this->form->project_category_id->getValue();
@@ -832,18 +833,16 @@ $this->inlineScript()->appendScript('
                                     + '<td>'
                                     + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id="" name="packagetype" class="form-control input-sm" style="width: 150px;">'
                                     + '<option value=\"\"></option>'
-                                    + '<option value=\"2\">Android (APK)</option>'
-                                    + '<option value=\"1\">AppImage</option>'
-                                    + '<option value=\"9\">Arch</option>'
-                                    + '<option value=\"5\">Debian</option>'
-                                    + '<option value=\"8\">Electron-Webapp</option>'
-                                    + '<option value=\"7\">Flatpak</option>'
-                                    + '<option value=\"10\">open/Suse</option>'
-                                    + '<option value=\"3\">OS X compatible</option>'
-                                    + '<option value=\"11\">Redhat</option>'
-                                    + '<option value=\"6\">Snappy</option>'
-                                    + '<option value=\"12\">Source Code</option>'
-                                    + '<option value=\"4\">Windows executable</option>'
+                                        <?php
+                                        // force $value to array so we can compare multiple values to multiple
+                                        // options; also ensure it's a string for comparison purposes.
+                                        $tagList = $packagetypeListHelper->fetchList();
+                                        foreach ($tagList as $opt_value => $opt_label) {
+                                        ?>
+                                          + '<option value="<?= $opt_value ?>"><?= $opt_label ?></option>'
+                                        <?php
+                                        }
+                                        ?>
                                     + '</select>'
                                     + '</td>'
                                     
@@ -1055,18 +1054,16 @@ $this->inlineScript()->appendScript('
                                 + '<td>'
                                 + '<select id="data-select-packagetype' + data.file.id + '" data-packagetype-id="" name="packagetype" class="form-control input-sm" style="width: 200px;">'
                                 + '<option value=\"\"></option>'
-                                + '<option value=\"2\">Android (APK)</option>'
-                                + '<option value=\"1\">AppImage</option>'
-                                + '<option value=\"9\">Arch</option>'
-                                + '<option value=\"5\">Debian</option>'
-                                + '<option value=\"8\">Electron-Webapp</option>'
-                                + '<option value=\"7\">Flatpak</option>'
-                                + '<option value=\"10\">open/Suse</option>'
-                                + '<option value=\"3\">OS X compatible</option>'
-                                + '<option value=\"11\">Redhat</option>'
-                                + '<option value=\"6\">Snappy</option>'
-                                + '<option value=\"12\">Source Code</option>'
-                                + '<option value=\"4\">Windows executable</option>'
+                                    <?php
+                                    // force $value to array so we can compare multiple values to multiple
+                                    // options; also ensure it's a string for comparison purposes.
+                                    $tagList = $packagetypeListHelper->fetchList();
+                                    foreach ($tagList as $opt_value => $opt_label) {
+                                    ?>
+                                      + '<option value="<?= $opt_value ?>"><?= $opt_label ?></option>'
+                                    <?php
+                                    }
+                                    ?>
                                 + '</select>'
                                 + '</td>'
                                 
