--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -20,6 +20,7 @@
  *    along with this program.  If not, see <http://www.gnu.org/licenses/>.
  **/
 $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
+$packagetypeListHelper = new Default_View_Helper_FetchPackagetypeTags();
 ?>
 
   <!-- ppload -->
@@ -217,7 +218,7 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                     //downloadlink is now: domain/api/files/downloadfile/id/ID/s/TOKEN/t/TIMESTAMP/u/USERID/FILE_NAME
                                     var hash = '<?= $this->download_hash ?>';
                                     var timetamp = '<?= $this->download_timestamp ?>';
-                                    var userid = '<?= $this->product->member_id?>';
+                                    var userid = '<?= $this->member_id?>';
 
                                     var downloadUrl = "https://<?= $_SERVER["SERVER_NAME"]?>/p/<?= $this->product->project_id ?>/startdownload?file_id=" + this.id + "&file_name=" + this.name + "&file_type=" + this.type + "&file_size=" + this.size + "&url=" + encodeURIComponent(pploadApiUri + 'files/downloadfile/id/' + this.id + '/s/' + hash + '/t/' + timetamp + '/u/' + userid + '/' + this.name);
                                     var downloadLink = '<a href="' + downloadUrl + '" id="data-link' + this.id + '">' + this.name + '</a>';
@@ -340,18 +341,16 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                             + '<td>'
                                             + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id="" name="packagetype" class="form-control input-sm" style="width: 200px;">'
                                             + '<option value=\"\"></option>'
-                                            + '<option value=\"2\">Android (APK)</option>'
-                                            + '<option value=\"1\">AppImage</option>'
-                                            + '<option value=\"9\">Arch</option>'
-                                            + '<option value=\"5\">Debian</option>'
-                                            + '<option value=\"8\">Electron-Webapp</option>'
-                                            + '<option value=\"7\">Flatpak</option>'
-                                            + '<option value=\"10\">open/Suse</option>'
-                                            + '<option value=\"3\">OS X compatible</option>'
-                                            + '<option value=\"11\">Redhat</option>'
-                                            + '<option value=\"6\">Snappy</option>'
-                                            + '<option value=\"12\">Source Code</option>'
-                                            + '<option value=\"4\">Windows executable</option>'
+                                                <?php
+                                                // force $value to array so we can compare multiple values to multiple
+                                                // options; also ensure it's a string for comparison purposes.
+                                                $tagList = $packagetypeListHelper->fetchList();
+                                                foreach ($tagList as $opt_value => $opt_label) {
+                                                ?>
+                                                  + '<option value="<?= $opt_value ?>"><?= $opt_label ?></option>'
+                                                <?php
+                                                }
+                                                ?>
                                             + '</select><span id="file-tag-packagetype'+this.id+'">'
                                             + '</td>'
                                             + '<td>'
@@ -618,38 +617,18 @@ $architectureListHelper = new Default_View_Helper_FetchArchitectureTags();
                                             + '<td>'
                                             + '<select id="data-select-packagetype' + this.id + '" data-packagetype-id=" name="packagetype" class="form-control input-sm" style="width: 200px;">'
                                             + '<option value=\"\"></option>'
-                                            + '<option value=\"2\">Android (APK)</option>'
-                                            + '<option value=\"1\">AppImage</option>'
-                                            + '<option value=\"9\">Arch</option>'
-                                            + '<option value=\"5\">Debian</option>'
-                                            + '<option value=\"8\">Electron-Webapp</option>'
-                                            + '<option value=\"7\">Flatpak</option>'
-                                            + '<option value=\"10\">open/Suse</option>'
-                                            + '<option value=\"3\">OS X compatible</option>'
-                                            + '<option value=\"11\">Redhat</option>'
-                                            + '<option value=\"6\">Snappy</option>'
-                                            + '<option value=\"12\">Source Code</option>'
-                                            + '<option value=\"4\">Windows executable</option>'
+                                            <?php
+                                            // force $value to array so we can compare multiple values to multiple
+                                            // options; also ensure it's a string for comparison purposes.
+                                            $tagList = $packagetypeListHelper->fetchList();
+                                            foreach ($tagList as $opt_value => $opt_label) {
+                                            ?>
+                                              + '<option value="<?= $opt_value ?>"><?= $opt_label ?></option>'
+                                            <?php
+                                            }
+                                            ?>
                                             + '</select><span id="file-tag-packagetype'+this.id+'">'
                                             + '</td>'
-                                            <?php /**
-                                            + '<td>'
-                                            + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
-                                            + '    <option value=""></option>'
-                                                <?php
-                                                // force $value to array so we can compare multiple values to multiple
-                                                // options; also ensure it's a string for comparison purposes.
-                                                $tagList = $architectureListHelper->fetchList();
-                                                foreach ($tagList as $opt_value => $opt_label) {
-                                                ?>
-                                                  + '<option value="<?= $opt_value ?>"><?= $opt_label ?></option>'
-                                                <?php
-                                                }
-                                                ?>
-                                            + '</select><span id="file-tag-architecture'+this.id+'">'
-                                            + '</td>'
-                                            */?>
-
                                             + '<td>'
                                             + '<select class="form-control input-sm" id="data-select-architecture' + this.id + '" data-architecture-id="" name="architecture">'
                                             + '    <option value=""></option>'
