--- a/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
+++ b/application/modules/default/views/scripts/home/partials/product_plingcom.phtml
@@ -59,7 +59,7 @@
              }
              $tags = $this->truncate(Default_Model_HtmlPurify::purify($tags), 30, '...', false, true);
              $resultStringAll .= $tags.'</span>';
-             echo $resultString;
+             echo $resultStringAll;
          } ?>
         </div>
  </div>
