--- a/application/modules/default/views/scripts/product/partials/searchFilter.phtml
+++ b/application/modules/default/views/scripts/product/partials/searchFilter.phtml
@@ -5,16 +5,24 @@
         $modelCategories = new Default_Model_ProjectCategory();
         $mapCategories = $modelCategories->fetchCatNames();
 
-        $mapFields = array('project_category_id' => 'Category', 'tags' => 'Tags', 'laplace_score' => 'Score');
-        $mapUrlIdent = array('project_category_id' => 'pci', 'tags' => 't', 'laplace_score' => 'ls');
-        $mapCurrentParam = array('project_category_id' => $this->pci, 'tags' => $this->t, 'laplace_score' => $this->ls);
+        $mapFields = array('project_category_id' => 'Category', 'tags' => 'Tags', 'package_names' => 'Package', 'arch_names' => 'Architecture', 'laplace_score' => 'Score');
+        $mapUrlIdent = array('project_category_id' => 'pci', 'tags' => 't', 'laplace_score' => 'ls', 'package_names' =>'pkg','arch_names' =>'arch');
+        $mapCurrentParam = array('project_category_id' => $this->pci, 'tags' => $this->t, 'laplace_score' => $this->ls,'package_names' => $this->pkg,'arch_names' => $this->arch);
 
         $currentCat = $this->pci;
         $currentScore = $this->ls;
         $currentTag = $this->t;
+        $currentPkg = $this->pkg;
+        $currentArch = $this->arch;
+
+        /**
         $urlCatPart = $this->pci ? array('pci'=>$this->pci) : array();
         $urlScorePart = $this->ls ? array('ls'=>$this->ls) : array();
+        */
+        
         $hasTagField = isset($this->searchField) AND $this->searchField == 'tags' ? true : false;
+        $hasPkgField = isset($this->searchField) AND $this->searchField == 'package_names' ? true : false;
+        $hasArchField = isset($this->searchField) AND $this->searchField == 'arch_names' ? true : false;
 
         ?>
     <style>
@@ -63,17 +71,29 @@
         <h4 style="font-weight: 600;padding:10px 15px;">Choose Filter:</h4>
         <div class="current-search">
         <?php if ($currentCat) : ?>
-        <a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'pci' => null))?>" class="btn btn-default btn-xs" role="button">
+        <a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, 'pci' => null))?>" class="btn btn-default btn-xs" role="button">
             <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $mapCategories[intval($currentCat)]?> </span>
         </a>
         <?php endif; ?>
         <?php if ($currentTag) : ?>
-            <a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 't' => null))?>" class="btn btn-default btn-xs" role="button">
+            <a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, 't' => null))?>" class="btn btn-default btn-xs" role="button">
                 <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $currentTag?>
             </a>
         <?php endif; ?>
+        <?php if ($currentPkg) : ?>
+            <a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, 'pkg' => null))?>" class="btn btn-default btn-xs" role="button">
+                <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $currentPkg?>
+            </a>
+        <?php endif; ?>
+
+         <?php if ($currentArch) : ?>
+            <a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, 'arch' => null))?>" class="btn btn-default btn-xs" role="button">
+                <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $currentArch?>
+            </a>
+        <?php endif; ?>
+
         <?php if ($currentScore) : ?>
-            <a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'ls' => null))?>" class="btn btn-default btn-xs" role="button">
+            <a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, 'ls' => null))?>" class="btn btn-default btn-xs" role="button">
                 <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $currentScore?>
             </a>
         <?php endif; ?>
@@ -90,15 +110,15 @@
             <button class="btn btn-default dropdown-toggle" type="button" data-toggle="dropdown"><?=$mapFields[$field_name]?> <span class="caret"></span></button>
             <ul class="dropdown-menu">
             <?php
-                switch ($mapFields[$field_name]) {
+                switch ($mapFields[$field_name]) {                    
                     case 'Category' : ?>
                         <?php foreach ($facet_field as $key =>$count) { ?>
                             <?php if ($key == $currentCat) : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'pci' => null))?>" class="active">
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, 'pci' => null))?>" class="active">
                                         <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $mapCategories[intval($key)]?> <span class="badge"><?=$count?></span>
                                     </a></li>
                             <?php else : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, 'pci'=>$key))?>">
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, 'pci'=>$key))?>">
                                    <?= $mapCategories[intval($key)]?> <span class="badge"><?=$count?></span></a>
                                 </li>
                             <?php endif; ?>
@@ -111,27 +131,64 @@
                         <?php $searchTextForTags = $hasTagField ? $currentTag : $this->searchText;
                             foreach ($facet_field as $key =>$count) { ?>
                             <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>$this->page, $mapUrlIdent[$field_name] => null))?>" class="active">
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
                                         <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
                                     </a></li>
                             <?php else : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>$this->page, $mapUrlIdent[$field_name] => $key))?>" >
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
                                         <?= $key?> <span class="badge"><?=$count?></span>
                                     </a></li>
                             <?php endif; ?>
                             <?php } ?>
-                        <?php break;
+                        <?php break;                  
+
+                    case 'Package' : ?>
+                        <?php if (count((array)$facet_field) == 0) :?>
+                            <li><span class="no-tags-msg"> no Package found </span></li>
+                        <?php endif; ?>
+                        <?php $searchTextForTags = $hasPkgField ? $currentPkg : $this->searchText;
+                            foreach ($facet_field as $key =>$count) { ?>
+                            <?php if ($key == $mapCurrentParam[$field_name]) : ?>
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
+                                        <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
+                                    </a></li>
+                            <?php else : ?>
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
+                                        <?= $key?> <span class="badge"><?=$count?></span>
+                                    </a></li>
+                            <?php endif; ?>
+                            <?php } ?>
+                        <?php break;      
+
+                    case 'Architecture' : ?>
+                        <?php if (count((array)$facet_field) == 0) :?>
+                            <li><span class="no-tags-msg"> no Architecture found </span></li>
+                        <?php endif; ?>
+                        <?php $searchTextForTags = $hasArchField ? $currentArch : $this->searchText;
+                            foreach ($facet_field as $key =>$count) { ?>
+                            <?php if ($key == $mapCurrentParam[$field_name]) : ?>
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
+                                        <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
+                                    </a></li>
+                            <?php else : ?>
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
+                                        <?= $key?> <span class="badge"><?=$count?></span>
+                                    </a></li>
+                            <?php endif; ?>
+                            <?php } ?>
+                        <?php break;    
+
                     case 'Score' : ?>
                         <?php if (count((array)$facet_field) == 0) :?>
                             <li><span class="no-tags-msg"> no tags found </span></li>
                         <?php endif; ?>
                         <?php foreach ($facet_field as $key =>$count) { ?>
                             <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, $mapUrlIdent[$field_name] => null))?>" class="active">
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
                                         <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
                                     </a></li>
                             <?php else : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>$this->page, $mapUrlIdent[$field_name] => $key))?>" >
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
                                         <?= $key?> <span class="badge"><?=$count?></span>
                                     </a></li>
                             <?php endif; ?>
