--- a/application/modules/default/views/scripts/product/search.phtml
+++ b/application/modules/default/views/scripts/product/search.phtml
@@ -4,7 +4,8 @@ $filterCat = $this->pci ? 'project_category_id:('.$this->pci.')' : null;
 $filterTags = $this->t ? 'tags:('.$this->t.')' : null;
 $filterPkg = $this->pkg ? 'package_names:('.$this->pkg.')' : null;
 $filterArch = $this->arch ? 'arch_names:('.$this->arch.')' : null;
-$param = array('q' => $this->searchText ,'page' => $this->page, 'count' => 10, 'qf' => $this->searchField, 'fq' => array($filterCat, $filterScore, $filterTags,$filterPkg,$filterArch));
+$filterLic = $this->lic ? 'license_names:('.$this->lic.')' : null;
+$param = array('q' => $this->searchText ,'page' => $this->page, 'count' => 10, 'qf' => $this->searchField, 'fq' => array($filterCat, $filterScore, $filterTags,$filterPkg,$filterArch,$filterLic));
 $modelSearch = new Default_Model_Solr();
 try {
     $this->result = $modelSearch->search($param);
