--- a/application/modules/default/views/scripts/product/partials/searchFilter.phtml
+++ b/application/modules/default/views/scripts/product/partials/searchFilter.phtml
@@ -95,7 +95,7 @@
         <?php endif; ?>
 
          <?php if ($currentLic) : ?>
-            <a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, 'arch' => null))?>" class="btn btn-default btn-xs" role="button">
+            <a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, 'lic' => null))?>" class="btn btn-default btn-xs" role="button">
                 <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $currentLic?>
             </a>
         <?php endif; ?>
