--- a/application/modules/default/views/scripts/product/partials/searchFilter.phtml
+++ b/application/modules/default/views/scripts/product/partials/searchFilter.phtml
@@ -139,11 +139,11 @@
                         <?php $searchTextForTags = $hasTagField ? $currentTag : $this->searchText;
                             foreach ($facet_field as $key =>$count) { ?>
                             <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
                                         <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
                                     </a></li>
                             <?php else : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText,'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
                                         <?= $key?> <span class="badge"><?=$count?></span>
                                     </a></li>
                             <?php endif; ?>
@@ -157,11 +157,11 @@
                         <?php $searchTextForTags = $hasPkgField ? $currentPkg : $this->searchText;
                             foreach ($facet_field as $key =>$count) { ?>
                             <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText,'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
                                         <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
                                     </a></li>
                             <?php else : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
                                         <?= $key?> <span class="badge"><?=$count?></span>
                                     </a></li>
                             <?php endif; ?>
@@ -175,11 +175,11 @@
                         <?php $searchTextForTags = $hasArchField ? $currentArch : $this->searchText;
                             foreach ($facet_field as $key =>$count) { ?>
                             <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText,'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
                                         <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
                                     </a></li>
                             <?php else : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
                                         <?= $key?> <span class="badge"><?=$count?></span>
                                     </a></li>
                             <?php endif; ?>
@@ -193,11 +193,11 @@
                         <?php $searchTextForTags = $hasLicField ? $currentLic : $this->searchText;
                             foreach ($facet_field as $key =>$count) { ?>
                             <?php if ($key == $mapCurrentParam[$field_name]) : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => null))?>" class="active">
                                         <span class="glyphicon glyphicon-remove text-danger" aria-hidden="true" style="margin-right: 2px;top:2px;"></span><?= $key?> <span class="badge"><?=$count?></span>
                                     </a></li>
                             <?php else : ?>
-                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$searchTextForTags, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
+                                <li><a rel="nofollow" href="<?=$helperUrl->url(array('projectSearchText'=>$this->searchText, 'page'=>1, $mapUrlIdent[$field_name] => $key))?>" >
                                         <?= $key?> <span class="badge"><?=$count?></span>
                                     </a></li>
                             <?php endif; ?>
