--- a/application/modules/default/views/scripts/product/index.phtml
+++ b/application/modules/default/views/scripts/product/index.phtml
@@ -303,7 +303,7 @@ $this->projectplings = $projectplings->fetchPlingsForProject($this->product->pro
                                     {                                       
                                         foreach (explode(',',$tagsuser) as $tag) { 
                                     ?>
-                                    <a rel="nofollow" href="/search/projectSearchText/<?=$tag?>/t/<?=$tag?>/f/tags" class="topic-tag topic-tag-link usertagslabel"><?=$tag?></a>
+                                    <a rel="nofollow" href="/search/projectSearchText/<?=$tag?>/f/tags" class="topic-tag topic-tag-link usertagslabel"><?=$tag?></a>
                                      <?php 
                                         }                                       
                                      }                                   
