--- a/application/modules/default/views/scripts/product/partials/ppload.phtml
+++ b/application/modules/default/views/scripts/product/partials/ppload.phtml
@@ -436,7 +436,7 @@ $packagetypeListHelper = new Default_View_Helper_FetchPackagetypeTags();
                                             $packagetypeIdText = $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").text();
                                             $("#data-select-packagetype" + this.id).hide();
                                             $("#file-tag-packagetype" + this.id).text($packagetypeIdText);
-                                            if($packagetypeIdText == 'Appimage'){
+                                            if($packagetypeIdText.toUpperCase() == 'APPIMAGE'){
                                                 $("#file-tag-packagetype" + this.id).append(' <i class="fa fa-question-circle appimagequestion" style="cursor: pointer;"></i>');
                                             }
 
@@ -681,7 +681,7 @@ $packagetypeListHelper = new Default_View_Helper_FetchPackagetypeTags();
                                              $packagetypeIdText = $("#data-select-packagetype" + this.id + " option[value='" + packagetypeId + "']").text();
                                              $("#data-select-packagetype" + this.id).hide();
                                              $("#file-tag-packagetype" + this.id).text($packagetypeIdText);
-                                             if($packagetypeIdText == 'Appimage'){
+                                             if($packagetypeIdText.toUpperCase() == 'APPIMAGE'){
                                                 $("#file-tag-packagetype" + this.id).append(' <i class="fa fa-question-circle appimagequestion" style="cursor: pointer;"></i>');
                                              }
 
