homepage revision, added mdl framework, timeago

--- a/application/modules/default/views/scripts/home/index-appimagehub.phtml
+++ b/application/modules/default/views/scripts/home/index-appimagehub.phtml
@@ -53,7 +53,8 @@
   $helpPrintDate = new Default_View_Helper_PrintDate();
 ?>
 
-<link type="text/css" rel="stylesheet" href="/theme/react/lib/semantic-ui/semantic.min.css"/>
+<link type="text/css" rel="stylesheet" href="/theme/react/lib/mdl/material.min.css"/>
+<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="/theme/react/assets/css/style.css"/>
 
 <main id="explore-content"></main>
@@ -104,6 +105,8 @@
 <script type="text/javascript" src="/theme/react/lib/redux/redux.min.js"></script>
 <script type="text/javascript" src="/theme/react/lib/redux/react-redux.min.js"></script>
 
-<script type="text/javascript" src="/theme/react/lib/semantic-ui/semantic.min.js"></script>
+<script type="text/javascript" src="/theme/react/lib/mdl/material.min.js"></script>
+
+<script type="text/javascript" src="/theme/react/lib/timeago/timeago.min.js"></script>
 
 <script type="text/javascript" src="/theme/react/all.js"></script>
