--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -8,10 +8,6 @@ header div.container.header {
 
 #app-root {
 
-  * {
-    font-family: Ubuntu,-apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif;
-  }
-
   .hp-section {
     padding: 60px 0;
     background-image: url('../img/hp-section-bg.png');
@@ -22,6 +18,7 @@ header div.container.header {
       padding-bottom: 15px;
       border-bottom: 1px solid #ccc;
       width: 100%;
+      margin-top: 0px;
     }
 
     &:nth-child(even){
@@ -41,6 +38,55 @@ header div.container.header {
   }
 
   #homepage-version-one {
+
+    #spotlight-product {
+      width: 100% !important;
+
+      h2 {
+        font-size: 30px;
+        margin-bottom: 10px;
+        padding-bottom: 5px;
+      }
+
+      .spotlight-product-sub-info {
+        margin-bottom: 10px;
+        .mdl-chip {
+          margin-right: 5px;
+          .material-icons {
+            margin: 3px;
+          }
+        }
+      }
+    }
+
+    .products-showcase {
+
+      .mdl-card {
+        width: 100% !important;
+
+        .mdl-card--expand {
+          background-size: cover;
+          background-position: center center;
+          background-repeat: no-repeat;
+          background-color: black;
+          position: relative;
+
+          a {
+            display: block;
+            width: 100%;
+            height: 100%;
+            position: absolute;
+            top: 0;
+            left: 0;
+          }
+        }
+
+        .mdl-card__actions {
+          height: 52px;
+          padding: 16px;
+        }
+      }
+    }
 
     img#download-app {
       border-radius: 21px;
@@ -140,8 +186,28 @@ header div.container.header {
 
     #latest-rss-news,
     #latest-blog-posts {
-      .menu.vertical {
-        width: 100%;
+      h2 {
+        padding: 10px;
+        margin: 0;
+        font-size: 30px;
+      }
+
+      .mdl-list {
+        padding-top: 0;
+        padding-bottom: 0;
+
+        .mdl-list__item {
+          h3 {
+            padding: 0;
+            margin: 0 0 10px 0;
+            font-size: 20px;
+          }
+        }
+
+
+        .mdl-list__item + .mdl-list__item {
+          border-top: 1px solid #ccc;
+        }
       }
     }
 
