--- a/httpdocs/theme/react/assets/less/style.less
+++ b/httpdocs/theme/react/assets/less/style.less
@@ -6,6 +6,11 @@ header div.container.header {
   height: 110px;
 }
 
+h2 {
+  font-size: 40px;
+}
+
+
 #app-root {
 
   .hp-section {
@@ -109,6 +114,8 @@ header div.container.header {
       width: 100%;
       height: 100%;
       border-radius: 21px;
+      min-height: 112px;
+      
 
       h1 {
         display: table-cell;
