--- a/application/modules/default/views/scripts/product/partials/listProducts.phtml
+++ b/application/modules/default/views/scripts/product/partials/listProducts.phtml
@@ -23,11 +23,46 @@
 $helperPrintDate = new Default_View_Helper_PrintDate();
 $helperBuildProductUrl = new Default_View_Helper_BuildProductUrl();
 $helperImage = new Default_View_Helper_Image();
-
 $this->rownum = (1 + (($this->page - 1) * 10));
+
 foreach ($this->products as $this->product) {
-    $updateTime = $helperPrintDate->printDate($this->product->changed_at, 'Y-m-d\TH:i:s\Z');
+    $updateTime = $helperPrintDate->printDate($this->product->changed_at, 'Y-m-d\TH:i:s\Z');  
+    $hl = $this->highlighting[$this->product->project_id];
+    if(isset($hl['description']))         
+    {
+         $this->product->description = $hl['description'][0];
+    }
+
+    $tags = '';
+    if(isset($hl['tags']))         
+    {
+         $this->product->tags = $hl['tags'][0];
+         $tags = $tags.','.$hl['tags'][0];
+    }
+     if(isset($hl['package_names']))         
+    {
+         $this->product->package_names = $hl['package_names'][0];
+         $tags = $tags.','.$hl['package_names'][0];
+    }
+     if(isset($hl['arch_names']))         
+    {
+         $this->product->arch_names = $hl['arch_names'][0];
+         $tags = $tags.','.$hl['arch_names'][0];
+    }
+    if(isset($hl['license_names']))         
+    {
+         $this->product->license_names = $hl['license_names'][0];
+         $tags = $tags.','.$hl['license_names'][0];
+    }
+
 ?>
+
+<style type="text/css">
+        main.searchresults em{
+            background-color: #FAEED1;
+        }
+
+</style>
 <div class="explore-product col-lg-12 col-md-12 col-sm-12 col-xs-12">
     <div class="col-lg-1 col-md-1 col-sm-1 col-xs-1">
         <div class="rownum">
@@ -37,34 +72,54 @@ foreach ($this->products as $this->product) {
     <div class="col-lg-2 col-md-2 col-sm-2 col-xs-2 explore-product-imgcolumn">
         <figure>
             <a href="<?= $helperBuildProductUrl->buildProductUrl($this->product->project_id, ''); ?>">
-                <div class="text-center">
-                <img src="<?php echo $helperImage->Image($this->product->image_small, array('width' => 167, 'height' => 167)); ?>" class="explore-product-image"/>
+                <div class="text-center imageContainer_">
+                <img src="<?php echo $helperImage->Image($this->product->image_small, array('width' => 167, 'height' => 167,'crop' => 0)); ?>" class="explore-product-image"/>
                 </div>
             </a>
         </figure>
     </div>
     <div class="explore-product-details col-lg-7 col-md-7 col-sm-7 col-xs-7">
-        <h3>
-        	<?php 
-              	$version = Default_Model_HtmlPurify::purify($this->product->version);
-              	$product_title = Default_Model_HtmlPurify::purify($this->product->title);
-           	?>
-            <a href="<?= $helperBuildProductUrl->buildProductUrl($this->product->project_id, ''); ?>"><?= $product_title ?> <span style="font-size: smaller; padding-left: 20px"><?= $version ?> </span></a>
+        <h3>          
+            <a href="<?= $helperBuildProductUrl->buildProductUrl($this->product->project_id, ''); ?>"><?= $this->product->title?> 
+            <span class="version"><?= $this->product->version ?> </span></a>
         </h3>
        
-        <b style="display: block; margin-bottom: 5px"><?php echo $this->product->cat_title?></b>
-        <b style="display: block; margin-bottom: 5px" class="small">by <a href="<?php echo $this->buildMemberUrl($this->product->member_id)?>"><?php echo $this->product->username?></a></b>
-        <div style="display: block; float: left">
-         <?php  
-          $type = $this->FetchProjectPackageTypes($this->product->project_id);
-          if(!empty($type)){ echo $type;} ?>
+       <div class="title">
+        <b><?php echo $this->product->cat_title?></b>
+        <b class="username small">by <a  href="<?php echo $this->buildMemberUrl($this->product->member_id)?>" 
+                    class="tooltipuser" data-tooltip-content="#tooltip_content" data-user="<?=$this->product->member_id?>">
+          <?php echo $this->product->username?></a></b>
+          
         </div>
 
+    
+        <div class="description" style=""><?php echo $this->truncate($this->product->description, 300)?></div>
+       
+        <div class="packagetypes" >
+         <?php
+         if (false === empty($tags)) {
+             $list_packages = explode(',', $tags);
+             $resultString = '';
+             foreach ($list_packages as $item) {
+                 if(strlen($item)>0)
+                 {
+                    $resultString = $resultString . ' <span class="packagetypeos" style="color:#333" > ' . stripslashes($item) . '</span>';
+                }
+             }
+             echo $resultString;
+         }
+        ?>
+
+
+       
+      
+        </div>
+
+        
+
         <div class="productInfo">
-       <?php
-                //$count_plingers = $this->product->count_plingers;
-                $count_comments = $this->product->count_comments;
-                //echo ($count_plingers>0 ? '<span class="cntSupporters">'.$count_plingers.' supporter':'').($count_plingers>1?'s':'').($count_plingers>0?'</span>':'') ;
+       <?php                
+                $count_comments = $this->product->count_comments;                
                 echo ($count_comments>0 ? '<span class="cntComments">'.$count_comments.' comment':'').($count_comments>1?'s':'').($count_comments>0?'</span>':'') ;
                 ?>
         </div>            
@@ -81,10 +136,7 @@ foreach ($this->products as $this->product) {
         include APPLICATION_PATH . '/modules/default/views/scripts/partials/widgetRating.phtml';
         //echo $this->render('partials/widgetRating.phtml'); ?>
         <!-- /RATING -->
-        <div class="progress">
-            <div class="bar no-goal">
-            </div>
-        </div>
+        
          
         <div class="collected">
           
