--- a/application/modules/default/views/scripts/product/search.phtml
+++ b/application/modules/default/views/scripts/product/search.phtml
@@ -16,6 +16,19 @@ try {
 }
 $this->pagination = $pagination = $modelSearch->getPagination();
 $this->products = $this->result['hits'];
+$this->highlighting = $this->result['highlighting'];
+
+
+// foreach ($this->highlighting as $k => $v) 
+// { 
+//       print 'KEY: '; 
+//       var_dump($k); 
+//       print 'VAL: '; 
+//       var_dump($v); 
+//       print "\n"; 
+// }
+
+
 
 $helperBuildExploreUrl = new Default_View_Helper_BuildExploreUrl();
 $modelInfo = new Default_Model_Info();
@@ -24,7 +37,7 @@ $this->countSupporters = $modelInfo->getCountActiveSupporters();
 $this->supporters = $modelInfo->getNewActiveSupporters(18);
 
 ?>
-<main id="explore-content">
+<main id="explore-content" class="searchresults">
     <section class="wrapper" id="products-wrapper">
         <span class="glyphicon  togglesidebar" id="btnTogglesidebar" ></span>
         <div class="GridFlex">
